--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body{
     font-weight: 300;
     font-style: normal;
     font-size: 68pt;
+    min-height: 99vh;
+    cursor: url(images/cursor/cursor-pink.png), auto;
 }
 
 img{
@@ -22,6 +24,10 @@ img{
     top:0;
 }
 
+/* .header:hover{
+    cursor:url(images/cursor/cursor-pink.png),pointer;
+} */
+
 .header h1{
     font-family: "new-reason", sans-serif;
     font-weight: 400;
@@ -30,6 +36,18 @@ img{
     margin-top: 7px;
     margin-bottom: 15px;
     margin-left: 20px;
+    line-height: 110%;
+}
+
+.header h1 a{
+    font-family: "new-reason", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 20pt;
+    margin-top: 7px;
+    padding-left: 0;
+    margin-bottom: 15px;
+    /* margin-left: 20px; */
     line-height: 110%;
 }
 
@@ -53,11 +71,9 @@ img{
     /* align-items: start; */
     gap: 0 2px;
     background-color: #000;
-}
-
-.vignettes-home:hover{
     cursor:url(images/cursor/cursor-pink.png),pointer;
 }
+
 
 .vignettes-home img{
     margin-bottom: 8px;
@@ -87,7 +103,7 @@ img{
     cursor:url(images/cursor/cursor-pink.png),pointer;
 }
 
-.vignettes-home iframe:hover{
+.page-contact{
     cursor:url(images/cursor/cursor-pink.png),pointer;
 }
 
@@ -98,12 +114,14 @@ img{
     font-size: 84px;
     color: black;
     margin-top: 20px;
+    cursor:url(images/cursor/cursor-pink.png),pointer;
 }
 
 .page-projets{
     display: grid;
     grid-template-columns:1fr 4fr;
     gap: 5px;
+    cursor:url(images/cursor/cursor-pink.png),pointer;
 }
 
 .texte-projets{
@@ -146,15 +164,11 @@ img{
     margin: 0px;
 }
 
-.footer{
-    margin-top: 2px solid #000;
-    margin-bottom: 2px solid #000;
-}
-
 .a-propos{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     gap:7px;
+    cursor:url(images/cursor/cursor-pink.png),pointer;
 }
 
 .a-propos-texte{
@@ -164,8 +178,38 @@ img{
     font-style: normal;
     font-size: 20px;
     margin-top: 15px;
+    cursor:url(images/cursor/cursor-pink.png),pointer;
 }
 
+.a-propos-texte-titre{
+    font-family: "new-reason", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 20px;
+    margin-top: 15px;
+    cursor:url(images/cursor/cursor-pink.png),pointer;
+}
+
+/* .a-propos-texte-soustitre{
+    font-family: "new-reason", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 20px;
+    margin-top: 15px;
+    cursor:url(images/cursor/cursor-pink.png),pointer;
+}
+     */
+
+.footer{
+    margin-top: 2px solid #000;
+    margin-bottom: 2px solid #000;
+    background-color: #FF7BAC;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-top: 2px solid #000;
+}
 .footer-text{
     /* background-color: #fff; */
     font-family: "new-reason", sans-serif;
@@ -174,20 +218,5 @@ img{
     font-size: 18px;
     margin-top: 2px solid #000;
     margin-bottom: 2px solid #000;
+    padding-top:4px;
 }
-
-/* .page-projets{
-    display: grid;
-    grid-template-columns:1fr 1fr 1fr 1fr 1fr;
-}
-
-.texte-projets{
-    background-color: #fff;
-    font-family: "new-reason", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 18px;
-    border-right: 2px solid #000;
-    padding: 3px;
-    padding-bottom: 300%;
-} */
