--- a/style.css
+++ b/style.css
@@ -75,6 +75,41 @@ img{
     cursor:url(images/cursor/cursor-pink.png),pointer;
 }
 
+/* @media screen and (max-width: 780px){
+    .vignettes-home{
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 0;
+        display: inline-block;
+        /* align-items: start; */
+        gap: 0 2px;
+        background-color: #fff;
+        cursor:url(images/cursor/cursor-pink.png),pointer;
+    }
+    .vignettes-home img{
+        margin-bottom: 0px;
+        /* align-items: center;
+        margin-top: 0px;
+        margin-right: 3px;
+        border-top:4px solid #fff;
+        border-right: 4px solid #fff;
+        border-left: 4px solid #fff;
+        box-shadow: 0px 2px solid #000;
+        max-width: 99%; */
+    }
+    .vignettes-home a{
+        background-color: #fff;
+        font-family: "new-reason", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 18px;
+        color: currentColor;
+        text-decoration: none;
+        /* margin-bottom: 10px solid #fff; */
+        /* padding: 12px; */
+    }
+} */
+
 
 .vignettes-home img{
     margin-bottom: 8px;
